--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -12,7 +12,13 @@
                 </div>
                 <div class="col-md-6 mb-3">
                     <label asp-for="Price">Price</label>
-                    <input type="text" asp-for="Price" class="form-control">
+                    <input type="text" asp-for="Price" class="form-control" asp-format="{0:#,##}">
+                </div>
+                <div class="col-md-12 mb-3">
+                    <label asp-for="Category">Category</label>
+                    <select asp-for="Category" asp-items="@ViewBag.Categories" class="form-select">
+                        <option selected disabled>Select Category</option>
+                    </select>
                 </div>
                 <div class="col-md-12 mb-3">
                     <label asp-for="Description">Description</label>
