--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,34 @@
-﻿@{
+﻿@model IEnumerable<Product>
+@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-md-12 mb-3">
+        <a asp-controller="Home" asp-action="Create" class="btn btn-primary btn-sm">Create Product</a>
+        <a asp-controller="Home" asp-action="Search" class="btn btn-success btn-sm">Product Search</a>
+    </div>
+    <div class="col-md-12">
+        <table class="table table-sm table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>Ürün Adı</th>
+                    <th>Ürün Açıklamsı</th>
+                    <th>Ürün Fiyatı</th>
+                    <th>Ürün Durumu</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var product in Model)
+                {
+                    <tr>
+                        <td>@product.Name</td>
+                        <td>@product.Description</td>
+                        <td>@product.Price</td>
+                        <td>@(product.isApproved == true ? Html.Raw("<span class=\"badge bg-success\">Onaylı</span>") : Html.Raw("<span class=\"badge bg-danger\">Onaysız</span>"))</td>
+                        <td><a asp-controller="Home" asp-action="Update" asp-route-id="@product.Id" class="btn btn-info btn-sm">Update</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
